--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,15 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.card-container{
+  width: 20em;
+  height: 28em;
+}
+
+.card-container img {
+  width: 100%;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
